--- a/TextToSpeech/index.html
+++ b/TextToSpeech/index.html
@@ -13,9 +13,9 @@
     <br><br>
     <label for="voice-select">Select Voice: </label>
     <select  id="voice-select">
-        <option value="num1">Voice no.1</option>
+        <!-- <option value="num1">Voice no.1</option>
         <option value="num2">Voice no.2</option>
-        <option value="num3">Voice no.3</option>
+        <option value="num3">Voice no.3</option> -->
     </select>
     <br><br>
     <div class="rangecontainer">
@@ -32,4 +32,8 @@
     <button id="speak-button"> Speak </button>
     <br><br>
 </body>
+
+<script src="script.js">
+</script>
+
 </html>
